--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Brett Lindsay",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   }
 }
